# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml
gendiff/: __init__.py  gendiff_main.py  json_formatter.py  plainresult.py  structuregenerator.py  stylishresult.py
gendiff/formatters/: json_formatter.py  plain_formatter.py  stylis_formatter.py
gendiff/scripts/: gendiff.py  gendiff_main.py  gendiff_script.py  gendiff_scripts.py  structuregenerator.py
tests/: test_gendiff.py
tests/test_data/expected_result/: plain.txt
