[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Elena <ziggy.taren.44@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
